<resources>
    <string name="app_name" translatable="false">Planda App</string>
    <string name="frag_header_skip">Skip</string>
    <string name="frag_maintxt">Log All Your</string>
    <string name="frag_bodytxt">Plants</string>
    <string name="frag1_txt">Never forget a plant again with this beautiful tracking software</string>
    <string name="frag2_txt">Measure The Light Level For Your Plants</string>
    <string name="frag3_txt">Remember when to water your plants</string>
    <string name="welcome_txt">Welcome to Planda</string>
    <string name="email_hint_txt">Email</string>
    <string name="password_hint_txt">Password</string>
    <string name="forgot_password_txt">Forgot Password?</string>
    <string name="login_txt">Login</string>
    <string name="register_txt">Register</string>
    <string name="password_confirm_hint_txt">Confirm Password</string>
    <string name="enter_txt">Enter The App</string>
    <string name="frag2_maintxt">Light</string>
    <string name="frag2_bodytxt">Sensor</string>
    <string name="frag3_bodytxt">Never forget to water your plants</string>
    <string name="frag3_maintxt">Always Remember to</string>
    <string name="frag3_extratxt">Water</string>
    <string name="bodyTxtFrag3">Never forget when to water your plants</string>

    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="info">info</string>
    <string name="swipe_explain">Swipe To Navigate</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logout_txt">Logout</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="cameraBtn">Open Camera</string>
    <string name="light_btn_txt">Light Sensor</string>
    <string name="camera_btn_txt">Camera</string>
    <string name="gallery_txt">gallery</string>
    <string name="back_txt">Back</string>

</resources>