<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/swipe_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swipe_explain"

        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="30dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/login_email_eTxt"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:background="@drawable/edit_txt_bg"

        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/email_hint_txt"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_password_txt"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:background="@drawable/edit_txt_bg"

        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".4"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/password_hint_txt"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".7"
        android:text="@string/login_txt"

        android:textColor="@color/white"
        android:background="@drawable/button_bg"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/forgot_password_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd='5dp'

        app:layout_constraintEnd_toEndOf="@+id/login_password_txt"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_txt"
        app:layout_constraintVertical_bias="0" />


</androidx.constraintlayout.widget.ConstraintLayout>