<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/register_email_txt"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:background="@drawable/edit_txt_bg"

        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".33"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/email_hint_txt"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:background="@drawable/edit_txt_bg"

        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".4"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/password_hint_txt"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/register_password_txt"
        android:layout_width="0dp"
        android:layout_height="40dp"

        android:background="@drawable/edit_txt_bg"

        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".47"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/password_confirm_hint_txt"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".7"
        android:text="@string/register_txt"

        android:textColor="@color/white"
        android:background="@drawable/button_bg"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>