<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink">

<!--    <com.airbnb.lottie.LottieAnimationView-->
<!--        android:id="@+id/fragment1animation"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.3"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/fragment1animation"-->
<!--        app:layout_constraintVertical_bias="0.3"-->
<!--        app:lottie_autoPlay="true"-->
<!--        app:lottie_rawRes="@raw/man_watering" />-->



    <TextView
        android:id="@+id/app_name_frag_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/frag_main_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/skip_frag1_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/frag_header_skip"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/app_name_frag_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/app_name_frag_header"
        app:layout_constraintTop_toTopOf="@+id/app_name_frag_header" />

    <TextView
        android:id="@+id/frag_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/frag_maintxt"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/frag1img"
        android:layout_width="235dp"
        android:layout_height="217dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/imgone"
        app:layout_constraintBottom_toTopOf="@+id/frag_main_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="@+id/frag_main_title"
        app:layout_constraintTop_toBottomOf="@+id/app_name_frag_header"
        app:layout_constraintVertical_bias="0.934" />

    <TextView
        android:id="@+id/frag_main_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/frag_bodytxt"
        android:textColor="@color/white"
        android:textSize="56sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/frag_main_title"
        app:layout_constraintTop_toBottomOf="@+id/frag_main_title"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/longtxtfrag1"
        android:layout_width="138dp"
        android:layout_height="96dp"
        android:text="@string/frag1_txt"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="@+id/frag_main_body"
        app:layout_constraintStart_toStartOf="@+id/frag_main_body"
        app:layout_constraintTop_toBottomOf="@+id/frag_main_body" />

    <ImageView
        android:id="@+id/tab1"
        android:layout_width="50dp"
        android:layout_height="10dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/tab_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/longtxtfrag1"
        app:layout_constraintTop_toBottomOf="@+id/longtxtfrag1"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintHorizontal_bias="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>