<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/logout_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="logout"

        android:text="@string/logout_txt"
        android:textColor="@color/white"

        android:background="@drawable/button_bg"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:layout_margin="15dp"/>

    <Button
        android:id="@+id/cameraBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/camera_btn_txt"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="@+id/textView"

        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0"

        />

    <Button
        android:id="@+id/sensorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light_btn_txt"

        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"

        app:layout_constraintStart_toStartOf="@+id/cameraBtn"

        app:layout_constraintTop_toBottomOf="@+id/cameraBtn"
        app:layout_constraintVertical_bias="0"

        />

    <Button
        android:id="@+id/feature3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Placeholder"

        android:layout_marginTop="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"

        app:layout_constraintStart_toStartOf="@+id/sensorBtn"

        app:layout_constraintTop_toBottomOf="@+id/sensorBtn"
        app:layout_constraintVertical_bias="0"

        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_margin="15dp"
        android:text="Features"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />



</androidx.constraintlayout.widget.ConstraintLayout>